--- a/skulpin-renderer/Cargo.toml
+++ b/skulpin-renderer/Cargo.toml
@@ -23,11 +23,14 @@ complete = ["skia-safe/textlayout"]
 
 [dependencies]
 # rafx does not yet follow semver
-rafx = { version = "=0.0.14", features = ["rafx-vulkan", "framework"] }
+rafx = { git = "https://github.com/StratusFearMe21/rafx-sdl2", features = [
+  "rafx-vulkan",
+  "framework",
+] }
 bincode = "1.3.1"
 lazy_static = "1"
 
 skia-safe = { version = ">=0.38.1", features = ["vulkan"] }
 skia-bindings = { version = ">=0.38.0" }
 
-log="0.4"
+log = "0.4"
